--- a/idoc/www/tklib/files/modules/tooltip/tooltip.html
+++ b/idoc/www/tklib/files/modules/tooltip/tooltip.html
@@ -107,7 +107,7 @@
 &#124; <a href="../../../../toc2.html">Applications</a>
  ] <hr>
 <div class="doctools">
-<h1 class="doctools_title">tooltip(n) 1.6 tklib &quot;Tooltip management&quot;</h1>
+<h1 class="doctools_title">tooltip(n) 1.7 tklib &quot;Tooltip management&quot;</h1>
 <div id="name" class="doctools_section"><h2><a name="name">Name</a></h2>
 <p>tooltip - Tooltip management</p>
 </div>
@@ -128,7 +128,7 @@
 <ul class="doctools_requirements">
 <li>package require <b class="pkgname">Tcl 8.5</b></li>
 <li>package require <b class="pkgname">msgcat 1.3</b></li>
-<li>package require <b class="pkgname">tooltip <span class="opt">?1.6?</span></b></li>
+<li>package require <b class="pkgname">tooltip <span class="opt">?1.7?</span></b></li>
 </ul>
 <ul class="doctools_syntax">
 <li><a href="#1"><b class="cmd">::tooltip::tooltip</b> <i class="arg">command</i> <span class="opt">?<i class="arg">options</i>?</span></a></li>
@@ -137,9 +137,9 @@
 </div>
 </div>
 <div id="section1" class="doctools_section"><h2><a name="section1">Description</a></h2>
-<p>This package provides tooltips, small text messages that can be displayed
-when the mouse hovers over a widget, menu item, canvas item, listbox or
-ttk::treeview item, ttk::notebook tab or text widget tag.</p>
+<p>This package provides tooltips, i.e., small text messages that can be displayed
+when the mouse hovers over a widget, menu item, canvas item, listbox item,
+ttk::treeview item or column heading, ttk::notebook tab, or text widget tag.</p>
 </div>
 <div id="section2" class="doctools_section"><h2><a name="section2">COMMANDS</a></h2>
 <dl class="doctools_definitions">
@@ -179,9 +179,14 @@ message <i class="arg">message</i>.  The tooltip uses a late-binding msgcat call
 passed in message to allow for on-the-fly language changes in an application.
 If the widget specified is a menu, canvas, listbox, ttk::treeview,
 ttk::notebook or text widget then additional options are used to tie the
-tooltip to specific menu, canvas, listbox or ttk::treeview items, ttk::notebook
-tabs or text widget tags.</p>
+tooltip to specific menu, canvas or listbox items, ttk::treeview items or
+column headings, ttk::notebook tabs, or text widget tags.</p>
 <dl class="doctools_options">
+<dt><b class="option">-heading</b> <i class="arg">columnId</i></dt>
+<dd><p>This option is used to set a tooltip for a ttk::treeview column heading.
+The column does not need to already exist. You should not use the same
+identifiers for columns and items in a widget for which you are using tooltips
+as their tooltips will be mixed. The widget must be a ttk::treeview widget.</p></dd>
 <dt><b class="option">-index</b> <i class="arg">index</i></dt>
 <dd><p>This option is used to set a tooltip on a menu item. The index may be
 either the entry index or the entry label. The widget must be a menu
