--- a/idoc/www/tklib/files/modules/tooltip/tooltip.html
+++ b/idoc/www/tklib/files/modules/tooltip/tooltip.html
@@ -93,7 +93,7 @@
 </head>
 <!-- Generated from file 'tooltip.man' by tcllib/doctools with format 'html'
    -->
-<!-- Copyright &amp;copy; 1996-2008, Jeffrey Hobbs
+<!-- Copyright &amp;copy; 1996-2008, Jeffrey Hobbs   -- Copyright &amp;copy; 2024 Emmanuel Frecon
    -->
 <!-- tooltip.n
    -->
@@ -107,7 +107,7 @@
 &#124; <a href="../../../../toc2.html">Applications</a>
  ] <hr>
 <div class="doctools">
-<h1 class="doctools_title">tooltip(n) 1.7 tklib &quot;Tooltip management&quot;</h1>
+<h1 class="doctools_title">tooltip(n) 1.7.1 tklib &quot;Tooltip management&quot;</h1>
 <div id="name" class="doctools_section"><h2><a name="name">Name</a></h2>
 <p>tooltip - Tooltip management</p>
 </div>
@@ -128,7 +128,7 @@
 <ul class="doctools_requirements">
 <li>package require <b class="pkgname">Tcl 8.5</b></li>
 <li>package require <b class="pkgname">msgcat 1.3</b></li>
-<li>package require <b class="pkgname">tooltip <span class="opt">?1.7?</span></b></li>
+<li>package require <b class="pkgname">tooltip <span class="opt">?1.7.1?</span></b></li>
 </ul>
 <ul class="doctools_syntax">
 <li><a href="#1"><b class="cmd">::tooltip::tooltip</b> <i class="arg">command</i> <span class="opt">?<i class="arg">options</i>?</span></a></li>
@@ -274,6 +274,7 @@ package and/or documentation.</p>
 <p><a href="../../../../index.html#balloon">balloon</a>, <a href="../../../../index.html#help">help</a>, <a href="../../../../index.html#hover">hover</a>, <a href="../../../../index.html#tooltip">tooltip</a></p>
 </div>
 <div id="copyright" class="doctools_section"><h2><a name="copyright">Copyright</a></h2>
-<p>Copyright &copy; 1996-2008, Jeffrey Hobbs</p>
+<p>Copyright &copy; 1996-2008, Jeffrey Hobbs<br>
+Copyright &copy; 2024 Emmanuel Frecon</p>
 </div>
 </div></body></html>
