--- a/idoc/www/tklib/files/modules/tooltip/tooltip.html
+++ b/idoc/www/tklib/files/modules/tooltip/tooltip.html
@@ -107,7 +107,7 @@
 &#124; <a href="../../../../toc2.html">Applications</a>
  ] <hr>
 <div class="doctools">
-<h1 class="doctools_title">tooltip(n) 1.7.1 tklib &quot;Tooltip management&quot;</h1>
+<h1 class="doctools_title">tooltip(n) 1.8 tklib &quot;Tooltip management&quot;</h1>
 <div id="name" class="doctools_section"><h2><a name="name">Name</a></h2>
 <p>tooltip - Tooltip management</p>
 </div>
@@ -128,11 +128,11 @@
 <ul class="doctools_requirements">
 <li>package require <b class="pkgname">Tcl 8.5</b></li>
 <li>package require <b class="pkgname">msgcat 1.3</b></li>
-<li>package require <b class="pkgname">tooltip <span class="opt">?1.7.1?</span></b></li>
+<li>package require <b class="pkgname">tooltip <span class="opt">?1.8?</span></b></li>
 </ul>
 <ul class="doctools_syntax">
 <li><a href="#1"><b class="cmd">::tooltip::tooltip</b> <i class="arg">command</i> <span class="opt">?<i class="arg">options</i>?</span></a></li>
-<li><a href="#2"><b class="cmd">::tooltip::tooltip</b> <i class="arg">pathName</i> <span class="opt">?<i class="arg">option value</i>?</span> <i class="arg">message</i></a></li>
+<li><a href="#2"><b class="cmd">::tooltip::tooltip</b> <i class="arg">pathName</i> <span class="opt">?<i class="arg">option value</i>...?</span> <span class="opt">?<b class="const">--</b>?</span> <i class="arg">message</i>|<i class="arg">image</i></a></li>
 </ul>
 </div>
 </div>
@@ -173,12 +173,13 @@ disappearing.</p></dd>
 <dt><b class="option">on</b></dt>
 <dd><p>Enables tooltips for defined widgets.</p></dd>
 </dl></dd>
-<dt><a name="2"><b class="cmd">::tooltip::tooltip</b> <i class="arg">pathName</i> <span class="opt">?<i class="arg">option value</i>?</span> <i class="arg">message</i></a></dt>
+<dt><a name="2"><b class="cmd">::tooltip::tooltip</b> <i class="arg">pathName</i> <span class="opt">?<i class="arg">option value</i>...?</span> <span class="opt">?<b class="const">--</b>?</span> <i class="arg">message</i>|<i class="arg">image</i></a></dt>
 <dd><p>This command arranges for widget <i class="arg">pathName</i> to display a tooltip with
-message <i class="arg">message</i>.  The tooltip uses a late-binding msgcat call on the
-passed in message to allow for on-the-fly language changes in an application.
-If the widget specified is a menu, canvas, listbox, ttk::treeview,
-ttk::notebook or text widget then additional options are used to tie the
+a <i class="arg">message</i> or an <i class="arg">image</i>. For images both bitmaps and photos are supported.
+For messages the tooltip uses a late-binding <b class="package">msgcat</b> call to allow for on-the-fly
+language changes in an application.
+If the widget specified is a <b class="cmd"><a href="../../../../index.html#menu">menu</a></b>, <b class="cmd"><a href="../../../../index.html#canvas">canvas</a></b>, <b class="cmd"><a href="../../../../index.html#listbox">listbox</a></b>, <b class="cmd">ttk::treeview</b>,
+<b class="cmd">ttk::notebook</b> or <b class="cmd"><a href="../../../../index.html#text">text</a></b> widget then additional options are used to tie the
 tooltip to specific menu, canvas or listbox items, ttk::treeview items or
 column headings, ttk::notebook tabs, or text widget tags.</p>
 <dl class="doctools_options">
@@ -210,8 +211,8 @@ The tag should already be present when this command is called, or an error will
 be returned. The widget must be a text widget.</p></dd>
 <dt><b class="option">--</b></dt>
 <dd><p>The <b class="option">--</b> option marks the end of options.
-The argument following this one will be treated as <i class="arg">message</i> even if it
-starts with a -.</p></dd>
+The argument following this one will be treated as <i class="arg">message</i> or <i class="arg">image</i>
+even if it starts with a <b class="const">-</b>.</p></dd>
 </dl></dd>
 </dl>
 </div>
