--- a/idoc/www/tklib/files/modules/notifywindow/notifywindow.html
+++ b/idoc/www/tklib/files/modules/notifywindow/notifywindow.html
@@ -107,7 +107,7 @@
 &#124; <a href="../../../../toc2.html">Applications</a>
  ] <hr>
 <div class="doctools">
-<h1 class="doctools_title">notifywindow(n) 1.0 tklib &quot;notifywindow&quot;</h1>
+<h1 class="doctools_title">notifywindow(n) 1.0.1 tklib &quot;notifywindow&quot;</h1>
 <div id="name" class="doctools_section"><h2><a name="name">Name</a></h2>
 <p>notifywindow - Provides unobtrusive window for alerts/notifications from Tk applications</p>
 </div>
@@ -126,7 +126,7 @@
 <div class="doctools_synopsis">
 <ul class="doctools_requirements">
 <li>package require <b class="pkgname">tk</b></li>
-<li>package require <b class="pkgname">notifywindow</b></li>
+<li>package require <b class="pkgname">notifywindow <span class="opt">?1.0.1?</span></b></li>
 </ul>
 <ul class="doctools_syntax">
 <li><a href="#1"><b class="cmd">::notifywindow::notifywindow</b> <i class="arg">msg</i> <i class="arg">img</i></a></li>
@@ -135,16 +135,22 @@
 </div>
 </div>
 <div id="section1" class="doctools_section"><h2><a name="section1">Description</a></h2>
-<p>This package provides a low-key, unobtrusive window for alerts and notifications from Tk applications that briefly appears in the upper-right hand corner of the screen. Modeled after the &quot;Growl&quot; framework on Mac OS X, the window fades in and out on platforms that support such effects, and appears and disappears on other platforms.</p>
+<p>This package provides a low-key, unobtrusive window for alerts and notifications from Tk
+applications that briefly appears in the upper-right hand corner of the screen. Modeled after the
+&quot;Growl&quot; framework on Mac OS X, the window fades in and out on platforms that support such effects,
+and appears and disappears on other platforms.</p>
 <dl class="doctools_definitions">
 <dt><a name="1"><b class="cmd">::notifywindow::notifywindow</b> <i class="arg">msg</i> <i class="arg">img</i></a></dt>
-<dd><p>Posts the toplevel notification window with the &quot;msg&quot; string, which should not exceed 40 characters, and an optional image, which should be 16x16 pixels.</p></dd>
+<dd><p>Posts the toplevel notification window with the <i class="arg">msg</i> string,
+which should not exceed 40 characters, and an optional image,
+which should be 16x16 pixels.</p></dd>
 <dt><a name="2"><b class="cmd">::notifywindow::demo</b></a></dt>
 <dd><p>Simple demo that illustrates how the package works.</p></dd>
 </dl>
 </div>
 <div id="section2" class="doctools_section"><h2><a name="section2">ACKNOWLEDGMENTS</a></h2>
-<p>notifywindow was inspired by the Growl notification package for Mac OS X, but shares no code with that project whatsoever.</p>
+<p>While <b class="package">notifywindow</b> was inspired by the Growl notification
+package for Mac OS X, it shares no code with that project whatsoever.</p>
 </div>
 <div id="section3" class="doctools_section"><h2><a name="section3">Bugs, Ideas, Feedback</a></h2>
 <p>This document, and the package it describes, will undoubtedly contain
