--- a/idoc/www/tklib/files/modules/tooltip/tooltip.html
+++ b/idoc/www/tklib/files/modules/tooltip/tooltip.html
@@ -91,7 +91,7 @@
     }
 --></style>
 </head>
-<!-- Generated from file 'tooltip.man' by tcllib/doctools with format 'html'
+<!-- Generated from file 'tooltip.man~' by tcllib/doctools with format 'html'
    -->
 <!-- Copyright &amp;copy; 1996-2008, Jeffrey Hobbs   -- Copyright &amp;copy; 2024 Emmanuel Frecon
    -->
